Adding tools for Aerospace, coding and stocks.